# elfvulnscan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bof_vuln.cpp  digimon.id0  digimon.id1  digimon.id2  digimon.nam  digimon.til  dump_ins.cpp  gemini_client.py  gemini_prompt.txt  requirements.txt  scanner
binary/: bof_vuln  bof_vuln.id0  bof_vuln.id1  bof_vuln.id2  bof_vuln.nam  bof_vuln.til  cmd_inject  fmt_vuln  heap_ovf  type_confusion  uaf_vuln  uninitMem_vuln
binary_source/: NULLPointerDereference.c  bof_vuln.cpp  cmd_inject.c  cmd_injection.c  fmt_vuln.c  heap_dbf.c  heap_ovf.c  integer_overflow.c  race_condition.c  type_confusion.c  uaf.c  uaf_vuln.c  uninitMem.c
exploit/: exploit_bof_vuln.py
include/: CommandInjectionDetector.h  Demangler.h  Disassembler.h  HeapOverflowDetector.h  UnsafeDetector.h
src/: CommandInjectionDetector.cpp  Demangler.cpp  Disassembler.cpp  HeapOverflowDetector.cpp  UnsafeDetector.cpp  main.cpp
